--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
   "name": "my-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.8",
+    "@expo/cli": "^0.0.0",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@types/highlight-words-core": "^1.2.1",
+    "expo": "~46.0.19",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-paper": "^5.0.2",
+    "react-native-realistic-deck-swiper": "^0.1.3",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-text-highlight": "^1.0.1",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
+    "@types/react-highlight-words": "^0.16.4",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-highlight-words": "^1.0.2",
+    "sharp-cli": "^4.1.0",
     "typescript": "^4.6.3"
   },
   "private": true
